añado servicios para consultas de OS
